git feat 调整pom打包配置，现在可以打成exe了，更新了文档